home page UI CSS updated

--- a/src/AboutUs.css
+++ b/src/AboutUs.css
@@ -1,9 +1,10 @@
 .about-us-container {
-    width: 1000px;
+    /* width: 1000px; */
     /* margin: 0 auto; */
     /* padding: 20px; */
     /* background-color: red; */
     text-align: justify;
+    padding: 2rem;
   }
   
   .about-us-heading {
